--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>哈！GitHub</title>
-  </head>
-  <body>
-    <h1>覺得厲害</h1>
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>vue-demo</title><link href=css/app.e1e46a29e9e4c709fbba1d02ffdd336a.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=js/manifest.5abe310ef2fafcf81b83.js></script><script type=text/javascript src=js/vendor.2420502e2b2c7f321d64.js></script><script type=text/javascript src=js/app.09f9895fb49037348c14.js></script></body></html>
